--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -1,23 +1,22 @@
-My Emacs configuration
-======================
+-*- org -*-
+#+STARTUP: nofold indent align hidestars content hideblocks
 
-Manifest
---------
-* README.md
-* init.el
-* development.el
-* editor.el
-* orgmode.el
-* packages.el
-* ui.el
-* themes
-
-Links
------
-[Russian EmacsWiki](http://www.emacswiki.org/cgi-bin/emacs-ru)
-[alexott.net emacs](http://alexott.net/ru/emacs/)
-[Emacs Muse](http://hatred.homelinux.net/wiki/zhurnal/2011-03-05_16.46_emacs_muse)
-[ErgoEmacs Features](http://ergoemacs.org/features.html)
-[Introduction to Emacs by Andy Harris](http://www.cs.iupui.edu/~aharris/emchap/EmacsGuide.html)
-[General Introductions to Org-mode video tutorials](http://orgmode.org/worg/org-tutorials/index.html)
-[Org: Your Life in Plain Text](http://orgmode.org/)
+* My Emacs configuration
+** Manifest
+- README.org
+- init.el
+- development.el
+- editor.el
+- orgmode.el
+- packages.el
+- ui.el
+- elpa
+- themes
+** Links
+[[http://www.emacswiki.org/cgi-bin/emacs-ru][Russian EmacsWiki]]
+[[http://alexott.net/ru/emacs/][alexott.net emacs]]
+[[http://hatred.homelinux.net/wiki/zhurnal/2011-03-05_16.46_emacs_muse][Emacs Muse]]
+[[http://ergoemacs.org/features.html][ErgoEmacs Features]]
+[[http://www.cs.iupui.edu/~aharris/emchap/EmacsGuide.html][Introduction to Emacs by Andy Harris]]
+[[http://orgmode.org/][Org: Your Life in Plain Text]]
+[[http://orgmode.org/worg/org-tutorials/index.html][General Introductions to Org-mode video tutorials]]
